<resources>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="title_discover">Discover</string>

    <string name="label_search_hint"><font size="12">Search Product, Deals, Merchants</font></string>
    <string name="label_redeem_options">Redeems</string>
    <string name="label_see_all">See All</string>
    <string name="label_coins">%1$d Coins</string>
    <string name="label_out_of_stock">OUT OF STOCK</string>
    <string name="label_redeem_up">Redeem up to %1$d Green Coins</string>
    <string name="label_savings">%1$d%% SAVINGS</string>
    <string name="label_reviews">%1$d Reviews</string>
    <string name="label_price">£%1$.2f</string>
    <string name="label_best_sellers">Best Sellers</string>

    <string name="message_onboarding_first">Find hot deals from hundreds\nof sustainable businesses</string>
    <string name="message_onboarding_second">Earn 1 Green Coin for every £1\nyou spend. 1% back to you!</string>
    <string name="message_onboarding_third">We plant a tree with every purchase\nyou make a show your impact.</string>
    <string name="title_onboarding_first">Green deals &amp;\nproducts at your\nfingertips</string>
    <string name="title_onboarding_second">Earn Green Coins &amp;\nget rewarded with\nevery purchase</string>
    <string name="title_onboarding_third">Plant a tree with\nevery purchase you\nmake</string>
    <string name="explanation_oh_no">Oh no!</string>
    <string name="seems_no_products_found">There seems to be no products found.</string>
    <string name="label_off">%1$d%% off</string>
    <string name="title_redeem">Redeem</string>
    <string name="label_created_by">by %1$s</string>
    <string name="label_about_this_item">About This Item</string>
    <string name="label_show_more">Show more</string>
    <string name="label_available_colours">AVAILABLE COLOURS</string>
    <string name="label_available_sizes">AVAILABLE SIZES</string>
    <string name="label_find_size">Find my size</string>
    <string name="label_variation">VARIATION</string>
    <string name="label_reviews_end">REVIEWS (%1$d)</string>
    <string name="label_related_products">Related PRODUCTS</string>
    <string name="label_by_now">Buy now</string>
    <string name="label_current_reviews">%.1f</string>
    <string name="title_find_my_size">Find my size</string>
    <string name="try_again">TRT AGAIN</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="oops">Oops!</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_basket">My Basket</string>
    <string name="your_basket_is_empty">Your basket is empty.</string>
    <string name="label_proceed_checkout">PROCEED TO CHECKOUT</string>
    <string name="label_free_shipping">FREE Shipping for a minimum spend of £%1$d on all %2$s products</string>
    <string name="label_products_count">(%1$s Items)</string>
    <string name="title_checkout">Checkout</string>
    <string name="label_payment">PAYMENT</string>
    <string name="label_shipping_address">SHIPPING ADDRESS</string>
    <string name="label_purchase_summary">PURCHASE SUMMARY</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_vat">VAT</string>
    <string name="label_total_shipping_fee">Total Shipping Fee</string>
    <string name="label_green_coins_redeemed">Green Coins Redeemed</string>
    <string name="label_green_coins_redeemed_value">-£%1$.2f</string>
    <string name="label_free">FREE</string>
    <string name="label_grand_total">Grand Total</string>
    <string name="label_coins_number">YOU HAVE %1$d GREEN COINS</string>
    <string name="label_redeemed_coins">%1$d Green Coins Redeemed (£%2$.2f)</string>
    <string name="label_payment_card_end">Card that ends in %1$s</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="label_standard_delivery">Standard Delivery</string>
    <string name="label_next_day_delivery">Next Day Delivery</string>
    <string name="label_express_delivery">Express Delivery</string>
    <string name="label_international_delivery">International Delivery</string>
    <string name="explore_campaigns">Explore Campaigns</string>
    <string name="label_explore_campaigns">Take part in merchant campaigns, share your experience in instagram and get rewarded.</string>
    <string name="seems_no_campaign_found">There seems to be no campaign found.</string>
    <string name="campaign_about_title">ABOUT THE CAMPAIGN</string>
    <string name="campaign_need_to_do_title">WHAT YOU NEED TO DO</string>
    <string name="campaign_tags_title">WHAT TAGS AND HANDLES TO INCLUDE</string>
    <string name="campaign_details_tag_notice">Make sure your instagram account is connected to Green Wallet before posting.</string>
    <string name="campaign_inspirations_title">INSPIRATIONS</string>
    <string name="campaign_rules_title">HOUSE RULES</string>
    <string name="link_instagram">Link Instagram</string>
    <string name="tag_copied">Tag copied to clipboard.</string>
    <string name="title_preview">Preview</string>

</resources>