<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="270dp"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_redeem_options_image"
            android:layout_width="@dimen/view_card_image_width"
            android:layout_height="@dimen/view_card_image_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bg_image_loading" />

        <TextView
            android:id="@+id/tv_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_text_off"
            android:paddingStart="@dimen/text_small_x"
            android:paddingEnd="@dimen/text_small_x"
            android:text="@string/label_coins"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small_xxx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_out_of_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maison_neue_bold"
            android:paddingStart="@dimen/margin_default"
            android:paddingTop="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_default"
            android:text="@string/label_out_of_stock"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_small"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_redeem_options_image" />

        <TextView
            android:id="@+id/tv_green_coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/maison_neue_book"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            android:text="@string/label_redeem_up"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_small_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_out_of_stock"
            app:layout_constraintBottom_toTopOf="@+id/tv_redeem_options_name"/>

        <TextView
            android:id="@+id/tv_redeem_options_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/maison_neue_book"
            android:lineSpacingExtra="3dp"
            android:lines="2"
            android:maxLines="2"
            android:paddingStart="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_green_coins"
            app:layout_constraintBottom_toTopOf="@+id/tv_savings"/>

        <TextView
            android:id="@+id/tv_savings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_medium"
            android:fontFamily="@font/maison_neue_demi"
            android:text="@string/label_savings"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>