<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundContent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large_xxx"
        android:fontFamily="@font/maison_neue_bold"
        android:text="@string/title_basket"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_large_x"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_button"
        android:layout_width="@dimen/back_icon_default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_arrow_back_light"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:tint="@color/colorAccent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_basket_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:paddingBottom="@dimen/margin_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large_xxxx"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <ImageView
            android:id="@+id/iv_no_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_common_empty_state"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_oh_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large_xxxx"
            android:fontFamily="@font/maison_neue_bold"
            android:includeFontPadding="false"
            android:text="@string/explanation_oh_no"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_large_x"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_item" />

        <TextView
            android:id="@+id/tv_no_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="@font/maison_neue_book"
            android:includeFontPadding="false"
            android:text="@string/your_basket_is_empty"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_oh_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/cl_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_proceed_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/bg_action_button"
            android:fontFamily="@font/maison_neue_extra_bold"
            android:text="@string/label_proceed_checkout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>