<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:elevation="6dp"
        android:fitsSystemWindows="true"
        app:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            app:layout_scrollFlags="scroll|snapMargins|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.0">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:fitsSystemWindows="true"
                    android:maxHeight="440dp"
                    android:src="@drawable/bg_image_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@drawable/bg_action_image"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:elevation="8dp"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xxx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large_x" />

            <TextView
                android:id="@+id/tv_about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/campaign_about_title"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_default" />

            <TextView
                android:id="@+id/tv_about_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_book"
                android:gravity="start"
                android:lineSpacingMultiplier="1.4"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_need_to_do_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xxx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/campaign_need_to_do_title"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_default" />

            <TextView
                android:id="@+id/tv_need_to_do_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_book"
                android:gravity="start"
                android:lineSpacingMultiplier="1.4"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_tags_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xxx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/campaign_tags_title"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_default" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingStart="@dimen/margin_small"
                android:paddingEnd="@dimen/margin_small" />

            <TextView
                android:id="@+id/tv_tags_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:drawablePadding="@dimen/padding_small"
                android:fontFamily="@font/maison_neue_book"
                android:gravity="start"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/campaign_details_tag_notice"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_small"
                app:drawableStartCompat="@drawable/ic_campaign_notice" />

            <TextView
                android:id="@+id/tv_inspiration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xxx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/campaign_inspirations_title"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_default" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_inspirations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_large" />

            <TextView
                android:id="@+id/tv_rules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large_xxx"
                android:layout_marginRight="@dimen/margin_large"
                android:fontFamily="@font/maison_neue_bold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/campaign_rules_title"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_default" />

            <TextView
                android:id="@+id/tv_rules_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/maison_neue_book"
                android:gravity="start"
                android:lineSpacingMultiplier="1.4"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/cl_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:elevation="8dp">

        <Button
            android:id="@+id/btn_link_instagram"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/bg_action_button"
            android:fontFamily="@font/maison_neue_extra_bold"
            android:text="@string/link_instagram"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>